fix for range filter on mobile

--- a/assets/scss/_filters.scss
+++ b/assets/scss/_filters.scss
@@ -155,6 +155,7 @@
       background: $primary;
       cursor: pointer;
       border-radius: 25px;
+      border: 0;
     }
   }
 
